@@ -6,9 +6,13 @@ This is a more flexible and safe way to configure ipython than *rc files
 This file is always imported on ipython startup. You should import all the
 ipython extensions you need here (see IPython/Extensions directory).
 
+Feel free to edit this file to customize your ipython experience. If 
+you wish to only use the old config system, it's perfectly ok to make this file 
+empty.
+
 """
 
-# see IPython.ipapi for configuration tips
+# Most of your config files and extensions will probably start with this import
 
 import IPython.ipapi as ip
 
@@ -23,18 +27,17 @@ if o.profile == 'pysh':
     # if you are doing shell-like stuff
     ip.ex("from IPython.path import path" )
     
-# get pysh-like prompt for all profiles. Comment these out for "old style"
-# prompts, as determined by *rc files
+# Uncomment these lines to get pysh-like prompt for all profiles. 
 
-o.prompt_in1= '\C_LightBlue[\C_LightCyan\Y1\C_LightBlue]\C_Green|\#> '
-o.prompt_in2= '\C_Green|\C_LightGreen\D\C_Green> '
-o.prompt_out= '<\#> '
+#o.prompt_in1= '\C_LightBlue[\C_LightCyan\Y1\C_LightBlue]\C_Green|\#> '
+#o.prompt_in2= '\C_Green|\C_LightGreen\D\C_Green> '
+#o.prompt_out= '<\#> '
 
 # make 'd' an alias for ls -F
 
 ip.magic('alias d ls -F --color=auto')
 
-# Make available all system commands. Comment out to speed up 
-# startup os slow machines and conserve a bit of memory
+# Make available all system commands. You can comment this line out to speed up 
+# startup on slow machines, and to conserve a bit of memory
 
 ip.magic('rehashx')
